WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40758
Fix boolean reflected attributes to use empty string consistently for the content attribute value
https://bugs.webkit.org/show_bug.cgi?id=40758
Summary
Fix boolean reflected attributes to use empty string consistently for the con...
Darin Adler
Reported
2010-06-16 20:58:22 PDT
Fix boolean reflected attributes to use empty string consistently for the content attribute value
Attachments
Patch
(25.33 KB, patch)
2010-06-16 21:16 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(27.28 KB, patch)
2010-06-16 21:24 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-06-16 21:16:49 PDT
Created
attachment 58957
[details]
Patch
Darin Adler
Comment 2
2010-06-16 21:17:46 PDT
Sam, this is the change you asked about in
bug 39936
.
Darin Adler
Comment 3
2010-06-16 21:24:23 PDT
Created
attachment 58958
[details]
Patch
Darin Adler
Comment 4
2010-06-17 07:24:31 PDT
Comment on
attachment 58958
[details]
Patch Clearing flags on attachment: 58958 Committed
r61322
: <
http://trac.webkit.org/changeset/61322
>
Darin Adler
Comment 5
2010-06-17 07:24:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug