2010-06-17  Darin Adler  <darin@apple.com>

Reviewed by Sam Weinig.

        Fix boolean reflected attributes to use empty string consistently for the content attribute value
        https://bugs.webkit.org/show_bug.cgi?id=40758

        Test: fast/dom/boolean-attribute-reflection.html

        The HTML5 specification and other browsers are all consistent:
        When setting a boolean IDL attribute to true, the attribute value
        gets set to the empty string. The guidelines for authors allow either
        the empty string or the name of the attribute, but for implementers
        of the DOM, the reflected attribute gets empty string.

        * dom/Element.cpp:
        (WebCore::Element::setBooleanAttribute): Use emptyAtom to set the
        attribute to the empty string.

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::setAutofocus): Use the empty string,
        not "autofocus".
        (WebCore::HTMLFormControlElement::setRequired): Use the empty string,
        not "required".
2010-06-17  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Fix boolean reflected attributes to use empty string consistently for the content attribute value
        https://bugs.webkit.org/show_bug.cgi?id=40758

        * fast/dom/boolean-attribute-reflection-expected.txt: Added.
        * fast/dom/boolean-attribute-reflection.html: Added.
        * fast/dom/script-tests/boolean-attribute-reflection.js: Added.

        * fast/dom/wrapper-classes-expected.txt: Regenerated.
        * fast/dom/wrapper-classes.html: Added some classes.

        * media/video-controls-expected.txt: Regenerated.
        * media/video-controls.html: Changed to expect the new correct results.
        Removed unnecessary use of offsetTop to force layout. This test covers only
        the DOM and has nothing to do with layout.

        * svg/dom/svgpath-getPathSegAtLength.html: Let the
        make-script-test-wrappers script regenerate this file.


Canonical link: https://commits.webkit.org/52332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61322 268f45cc-cd09-0410-ab3c-d52691b4dbfc